// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Line" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  border: none;
  border-bottom: 1px solid rgb(213, 214, 214);
  margin-bottom: 16px;
  margin-top: 16px;
}

<div
  className="emotion-0"
>
  <hr
    className="emotion-1"
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  border: none;
  border-bottom: 1px solid rgb(213, 214, 214);
  margin-bottom: 16px;
  margin-top: 16px;
}

<div
  className="emotion-0"
>
  <hr
    className="emotion-1"
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders with color 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  border: none;
  border-bottom: 1px solid #e02020;
  margin-bottom: 16px;
  margin-top: 16px;
}

<div
  className="emotion-0"
>
  <hr
    className="emotion-1"
    color="#e02020"
  >
    Line
  </hr>
</div>
`;
